window-cap-test-report.txt
Traceback (most recent call last):
  File "<frozen runpy>", line 198, in _run_module_as_main
  File "<frozen runpy>", line 88, in _run_code
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/__main__.py", line 18, in <module>
    main(module=None)
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/main.py", line 104, in __init__
    self.parseArgs(argv)
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/main.py", line 153, in parseArgs
    self.createTests()
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/main.py", line 164, in createTests
    self.test = self.testLoader.loadTestsFromNames(self.testNames,
                ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/loader.py", line 207, in loadTestsFromNames
    suites = [self.loadTestsFromName(name, module) for name in names]
              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.12.13/x64/lib/python3.12/unittest/loader.py", line 137, in loadTestsFromName
    module = __import__(module_name)
             ^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/work/youtube-radar-kx9v2m/youtube-radar-kx9v2m/tests/test_refresh_soundcharts_daily.py", line 122
    subject.refresh_tracks(payload, {'tracks': {}}, client, 1, 10, 95)
                                                                      ^
IndentationError: unindent does not match any outer indentation level
